fix: revert changes to icon spacing

--- a/src/button-dropdown/item-element/styles.scss
+++ b/src/button-dropdown/item-element/styles.scss
@@ -73,7 +73,7 @@
 }
 
 .icon {
-  padding-inline-end: awsui.$space-xxs;
+  padding-inline-end: awsui.$space-xs;
   flex-shrink: 0;
 
   &.checkmark {
